Implemented Append feature